@@ -57,6 +57,8 @@ admin.caption.smtp.host=Server
 admin.caption.smtp.pass=Kodeord
 admin.caption.smtp.user=Brugerid
 admin.caption.tableofcontents=Brug indholdsfortegnelse
+admin.caption.tableofcontentsdepth=Maximum table of contents depth
+admin.caption.tableofcontentsdepthhelp=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
 admin.caption.uploaddir=Fil upload folder (Skal v\u00E6re tilg\u00E6nglig for web serveren)
 admin.caption.uploaddirhelp=The directory in which to store uploaded files, and from which files will be downloaded.
 admin.caption.uploaddirrel=Relativ sti fra web server roden til fil upload folder
