@@ -57,6 +57,8 @@ admin.caption.smtp.host=Host
 admin.caption.smtp.pass=Has\u0142o
 admin.caption.smtp.user=Nazwa u\u017Cytkownika
 admin.caption.tableofcontents=U\u017Cyj spis\u00F3w tre\u015Bci
+admin.caption.tableofcontentsdepth=Maximum table of contents depth
+admin.caption.tableofcontentsdepthhelp=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
 admin.caption.uploaddir=Katalog dla wysy\u0142anych plik\u00F3w
 admin.caption.uploaddirhelp=Katalog w kt\u00F3rym s\u0105 zapisywane wysy\u0142ane pliki. Z tego katalogu pliki s\u0105 r\u00F3wnie\u017C pobierane.
 admin.caption.uploaddirrel=Wzgl\u0119dna (do g\u0142\u00F3wnego katalogu aplikacji) \u015Bcie\u017Cka do katalogu w kt\u00F3rym zapisywane s\u0105 wysy\u0142ane pliki. 
