@@ -57,6 +57,8 @@ admin.caption.smtp.host=V\u00E4rd
 admin.caption.smtp.pass=L\u00F6senord
 admin.caption.smtp.user=Anv\u00E4ndarnamn
 admin.caption.tableofcontents=Use table of contents
+admin.caption.tableofcontentsdepth=Maximum table of contents depth
+admin.caption.tableofcontentsdepthhelp=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
 admin.caption.uploaddir=File upload directory
 admin.caption.uploaddirhelp=The directory in which to store uploaded files, and from which files will be downloaded.
 admin.caption.uploaddirrel=Relative path from web server root to file upload directory
