@@ -57,6 +57,8 @@ admin.caption.smtp.host=\u4E3B\u673A
 admin.caption.smtp.pass=\u5BC6\u7801
 admin.caption.smtp.user=\u7528\u6237\u540D
 admin.caption.tableofcontents=\u4F7F\u7528\u5185\u5BB9\u76EE\u5F55
+admin.caption.tableofcontentsdepth=Maximum table of contents depth
+admin.caption.tableofcontentsdepthhelp=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
 admin.caption.uploaddir=\u6587\u4EF6\u4E0A\u4F20\u8DEF\u5F84
 admin.caption.uploaddirhelp=\u8BE5\u8DEF\u5F84\u7528\u6765\u5B58\u50A8\u4E0A\u4F20\u7684\u6587\u4EF6\uFF0C\u5E76\u4E14\u5E94\u8BE5\u662F\u53EF\u4EE5\u4E0B\u8F7D\u7684\u3002
 admin.caption.uploaddirrel=\u6587\u4EF6\u4E0A\u4F20\u76EE\u5F55\u5728\u670D\u52A1\u5668\u4E0A\u7684\u76F8\u5BF9\u8DEF\u5F84
