@@ -57,6 +57,8 @@ admin.caption.smtp.host=\u4E3B\u6A5F
 admin.caption.smtp.pass=\u5BC6\u78BC
 admin.caption.smtp.user=\u7528\u6236\u540D
 admin.caption.tableofcontents=\u4F7F\u7528\u5167\u5BB9\u76EE\u9304
+admin.caption.tableofcontentsdepth=Maximum table of contents depth
+admin.caption.tableofcontentsdepthhelp=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
 admin.caption.uploaddir=\u6587\u4EF6\u4E0A\u50B3\u8DEF\u5F91
 admin.caption.uploaddirhelp=\u8A72\u8DEF\u5F91\u7528\u4F86\u5B58\u5132\u4E0A\u50B3\u7684\u6587\u4EF6\uFF0C\u4E26\u4E14\u61C9\u8A72\u662F\u53EF\u4EE5\u4E0B\u8F09\u7684\u3002
 admin.caption.uploaddirrel=\u6587\u4EF6\u4E0A\u50B3\u76EE\u9304\u5728\u670D\u52D9\u5668\u4E0A\u7684\u76F8\u5C0D\u8DEF\u5F91
